tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/dns/tproxy/udp_ipv4/_test_context/ServiceEntry.1788231327.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dns
  namespace: echo-2-60257
spec:
  addresses:
  - 1.2.3.4
  endpoints: []
  hosts:
  - fake.service.local
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: STATIC
